compiler/testData/readJavaBinaryClass/kotlinSignature/error/WrongMethodName.kt
package test

import java.util.*

public open class WrongMethodName : Object() {
    public open fun foo() : String? = ""
}
